# GLEngine

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
include/: shader.h
src/: main.cpp
